# sfu

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  jsclient.html  jsclientnew.html  try.html
data/: localhost+1-key.pem  localhost+1.pem  public.pem
src/: participant.cpp  participant.hpp  room.cpp  room.hpp  router.cpp  router.hpp  utils.cpp  utils.hpp
ui/: cert.pem  index.html  key.pem  script.py  uireadme.md  voice-lib.js
